--- a/amazon-clone/src/components/Header/header.module.css
+++ b/amazon-clone/src/components/Header/header.module.css
@@ -2,6 +2,11 @@
   padding: 0;
   margin: 0;
 }
+.fixed {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 .header_container {
   background-color: #1a1a1a;
   display: flex;
@@ -106,6 +111,9 @@
   font-size: 20px;
   font-weight: bold;
   background-color: #1a1a1a;
+}
+.lower_container {
+  background-color: rgba(243, 236, 236, 0.4);
 }
 .order_container a:hover,
 .delivery:hover,
