--- a/amazon-clone/src/index.css
+++ b/amazon-clone/src/index.css
@@ -1,7 +1,8 @@
-body {
+* {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 :root {
   --primary-color: #febd69;
