--- a/amazon-clone/src/components/category/category.module.css
+++ b/amazon-clone/src/components/category/category.module.css
@@ -27,6 +27,10 @@
   position: relative;
   margin-top: -8%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   place-items: center;
+  gap: 50px;
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
 }
