--- a/amazon-clone/src/components/carousel/carousel.module.css
+++ b/amazon-clone/src/components/carousel/carousel.module.css
@@ -6,14 +6,10 @@
   position: absolute;
   bottom: 0px;
   width: 100%;
-  height: 50px;
+  /* height: 50px; */
   background-image: linear-gradient(
     to bottom,
     rgba(225, 225, 225, 0),
     rgba(225, 225, 225)
   );
-}
-.one {
-  height: 90vh;
-  align-items: center;
 }
