--- a/amazon-clone/src/components/product/product.module.css
+++ b/amazon-clone/src/components/product/product.module.css
@@ -41,7 +41,7 @@
 }
 .products_container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   max-width: 1450px;
   margin: 100px auto;
   gap: 50px;
